<resources>
    <string name="app_name">Stock Manager</string>
    <string name="app_developer">Muhammad Jamil</string>
    <string name="app_email">jamil138.amin@gmail.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>


    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="btn_login">    Login    </string>
    <string name="or">or</string>
    <string name="new_user">New User?</string>
    <string name="join_now">Join Now</string>
    <string name="categories">Categories</string>

    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>


    <string name="todo">TODO</string>

    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_about">About</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>